# Tennis-Refactoring-Kata

cpp/: AdvantageFormatter.cpp  AdvantageFormatter.h  AdvantageOrWinRule.cpp  AdvantageOrWinRule.h  CMakeLists.txt  DifferentAndBeforeAdvantageRule.cpp  DifferentAndBeforeAdvantageRule.h  EqualScoreFormatter.cpp  EqualScoreFormatter.h  EqualScoreRule.cpp  EqualScoreRule.h  Player.cpp  Player.h  ScoreFormatter.cpp  ScoreFormatter.h  WinFormatter.cpp  WinFormatter.h  all_tests.cpp  makefile  tennis.h  tennis1.cc  tennis2.cc  tennis3.cc
python/: tennis.py
